tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo
  : | String => String
  = | _ => "Hello"

let foo
  : | Boolean => String
  = | _ => "World"

let bar: Integer =
  let f = | x => x.foo()
  123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/single_dispatch_2.kk:10:20
   │
10 │   let f = | x => x.foo()
   │                    ^^^ Ambiguous Reference
   │
   = This function is overloaded with multiple signatures, but the first argument provided has unknown type.
     To disambiguate, annotate the type of the first argument of this function call with any of the following types:

       String

       Boolean
